adding my first modification to git

--- a/for_loop_exercise.ipynb
+++ b/for_loop_exercise.ipynb
@@ -15,7 +15,7 @@
    "outputs": [],
    "source": [
     "# Write a loop that prints numbers from 2 to 5\n",
-    "\n",
+    "print(2)\n",
     "\n",
     "# Write a loop that prints all odd numbers from 1 to 15 \n",
     "# tip : use the rest division %. Ex : 4 % 2 == 0 ; 5 % 2 == 1 ; 6 % 2 == 0 \n",
